--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.12.12",
     "morgan": "^1.9.1",
+    "node-cron": "^3.0.0",
     "request": "^2.88.0",
     "socket.io": "^2.4.1",
     "websocket": "^1.0.34"
